--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Form</title>
   <link href="https://fonts.googleapis.com/css?family=Comfortaa|PT+Sans" rel="stylesheet">
+  <style>
+    html {
+      height: 100%;
+    }
+    body {
+      min-height: 100%;
+    }
+  </style>
 </head>
 <body>
   <div id="app"></div>
